--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="form-group m-b-0">
                         <div class="col-sm-12 text-center">
-                            Already have an account? <a [routerLink]="['/register']" class="text-info m-l-5"><b>Sign In</b></a>
+                            Already have an account? <a class="text-info m-l-5"><b>Sign In</b></a>
                         </div>
                     </div>
                 </form>
